fixed some layout issues

--- a/css/about.css
+++ b/css/about.css
@@ -107,12 +107,18 @@ nav a{
 .content{
     display: flex;
     flex-direction: row;
-    width: 70%;
+    width: 80%;
     margin: 8% auto;
+    justify-content: space-between;
+    /* flex-wrap: wrap; */
 }
 
 .photo, .bio{
     margin: 0 2%;
+}
+
+.photo{
+    position: relative;
 }
 
 .bio{
@@ -122,10 +128,10 @@ nav a{
 .rectangle{
     width: 500px;
     height: 700px;
-    background-color: var(--main-blue);
+    background-color: var(--sec-blue);
     z-index: -1;
     position: absolute;
-    top: 175px;
+    top: 40px;
     left: 240px;
 }
 .bio h1{
