--- a/css/designs.css
+++ b/css/designs.css
@@ -75,11 +75,14 @@ a{
 
 /*  NAV*/
 nav{
-    position: absolute;
-    top: 25px;
-    /* left: 5%; */
+    display: flex;
+    justify-content: space-between;
     line-height: 50px;
+    height: 5%;
     width: 100%;
+    margin-top: 2%;
+    vertical-align: middle;
+    margin-bottom: 1%;;
 }
 
 .name{
@@ -93,9 +96,7 @@ nav a{
 }
 
 .right-nav{
-    position: absolute;
-    right: 5%;
-    top: 5px;
+    margin-right: 5%;
 }
 
 .right-nav a:first-child{
@@ -146,11 +147,10 @@ nav a{
 
 /* CONTENT */
 
-.top-banner{
-    margin-top: 5%;
-}
+
 .banner-top{
     width: 100%;
+    margin-bottom: 2%;
 }
 
 .wrapper-content{
