--- a/css/fitfam.css
+++ b/css/fitfam.css
@@ -80,11 +80,14 @@ a{
 
 /*  NAV*/
 nav{
-    position: absolute;
-    top: 25px;
-    /* left: 5%; */
+    display: flex;
+    justify-content: space-between;
     line-height: 50px;
+    height: 5%;
     width: 100%;
+    margin-top: 2%;
+    vertical-align: middle;
+    margin-bottom: 1%;
 }
 
 .name{
@@ -102,9 +105,7 @@ nav a{
 }
 
 .right-nav{
-    position: absolute;
-    right: 5%;
-    top: 5px;
+    margin-right: 5%;
 }
 
 .right-nav a:first-child{
@@ -134,11 +135,9 @@ nav a{
     font-size: 30px;
 }
 
-.top-banner{
-    margin-top: 5%;
-}
 .banner-top{
     width: 100%;
+    margin-bottom: 2%;
 }
 .content-wrapper{
     width: 60%;
