--- a/css/mandoline.css
+++ b/css/mandoline.css
@@ -78,16 +78,16 @@ a{
     color: var(--main-blue);
 }
 
-.header{
-    margin-top: 5%;
-}
 /*  NAV*/
 nav{
-    position: absolute;
-    top: 25px;
-    /* left: 5%; */
+    display: flex;
+    justify-content: space-between;
     line-height: 50px;
+    height: 5%;
     width: 100%;
+    margin-top: 2%;
+    vertical-align: middle;
+    margin-bottom: 1%;
 }
 
 .name{
@@ -105,9 +105,7 @@ nav a{
 }
 
 .right-nav{
-    position: absolute;
-    right: 5%;
-    top: 5px;
+    margin-right: 5%;
 }
 
 .right-nav a:first-child{
@@ -135,6 +133,11 @@ nav a{
     font-family: 'Montserrat';
     font-weight: 600;
     font-size: 30px;
+}
+
+.banner-top{
+    width: 100%;
+    margin-bottom: 2%;
 }
 
 .content-wrapper{
