--- a/css/venmo.css
+++ b/css/venmo.css
@@ -80,11 +80,14 @@ a{
 
 /*  NAV*/
 nav{
-    position: absolute;
-    top: 25px;
-    /* left: 5%; */
+    display: flex;
+    justify-content: space-between;
     line-height: 50px;
+    height: 5%;
     width: 100%;
+    margin-top: 2%;
+    vertical-align: middle;
+    margin-bottom: 2%;
 }
 
 .name{
@@ -102,9 +105,7 @@ nav a{
 }
 
 .right-nav{
-    position: absolute;
-    right: 5%;
-    top: 5px;
+    margin-right: 5%;;
 }
 
 .right-nav a:first-child{
@@ -157,14 +158,11 @@ footer > p, .social > a {
 /*CONTENT*/
 
 
-.top-banner{
-    /* width: 100%; */
-    width: 100%;
-    /* margin-top: 5%; */
-}
+
 .banner-top{
     /* width: vw; */
     max-width: 100%;
+    margin-bottom: 2%;
 }
 
 .content-wrapper{
